[project]
name = "galaxy"
version = "0.0.1"
authors = [
  { name="larsh", email="lh@suricube.de" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/suricube"
Issues = "https://github.com/suricube/issues"

[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"
